2009-Jan-18  yselkowitz

	* bin/cygport.in (unpack): Support .tar.lzo archives.

	*  data/cygport.nanorc: Fix regexes, replacing \< with [[:<:]], etc:
	http://cygwin.com/ml/cygwin/2009-01/msg00531.html

2009-Jan-09  yselkowitz

	* lib/kde3.cygclass: Fix SRC_URI for kdevelop-3.5.4.

2009-Jan-05  yselkowitz

	* lib/xfce4.cygclass: Rename gtk-engines-xfce binary package.

	* bin/cygport.in (__pkg_diff): Make .src.patch with diff -p.

	* lib/claws-mail.cygclass: Stop mangling ORIG_PN.

	* lib/kde3.cygclass (kde3_compile): Disable apidox for KDE3.

2008-Dec-18  yselkowitz

	* lib/ruby-gnome2.cygclass (ruby_gnome2_compile, ruby_gnome2_install):
	Fix rdoc generation when building monolithic ruby-gnome2-all.

	* lib/pygtk.cygclass (pygtk_compile): Use pygobject-codegen-2.0 if present.

	* lib/gtkmm.cygclass: Remove all number suffixes from ORIG_PN.

	* lib/gtk2-perl.cygclass (gtk2_perl_install): Avoid mv 'same file' error.

2008-Dec-08  yselkowitz

	* bin/cygport.in (__pkg_diff): Ignore *.jlc (compiled librep lisp) files.

	* bin/cygport.in (__prepetc): Fix per-package postinst/prerm install.

	* bin/cygport.in (cygpatch): Try with and without --binary.

	* lib/gtkmm.cygclass: Improve ORIG_PN. Fix DIFF_EXCLUDES for 2.24.

	* bin/prep_fonts_dir.sh: Simplify .pcf compression code.

2008-Nov-26  yselkowitz

	* lib/gst-plugins0.10.cygclass: Enable experimental plugins.
	Override winsock2.h detection in favour of sys/socket.h.

2008-Nov-09  yselkowitz

	* lib/ruby-gnome2.cygclass (ruby_gnome2_install): Accept RDOC_MODULE.

	* bin/cygport.in (lndirs): lndir is now in the distro as part of 
	modular X11, so we can require it unconditionally.

	* lib/fox-build.cygclass: Removed.

2008-Nov-05  yselkowitz

	* lib/xfce4.cygclass: Update for 4.6-beta.

	* bin/cygport.in (__pkg_dist): In the case of split binary packages, 
	an empty binary package is not required to be aside the source package.

	* Post-release version bump.

2008-Oct-28  yselkowitz

	* Tagged 0.9.3.
